--- a/LIG4Jogo/.vscode/launch.json
+++ b/LIG4Jogo/.vscode/launch.json
@@ -9,7 +9,7 @@
             "name": "Current File",
             "request": "launch",
             "mainClass": "${file}",
-            "vmArgs": "-Djava.library.path=${LIG4Jogo}/javafx-sdk-20.0.1/lib --add-modules javafx.controls,javafx.fxml"
+            "vmArgs": "--module-path C:/Users/mayan/Downloads/openjfx-20.0.1_windows-x64_bin-sdk/javafx-sdk-20.0.1/lib --add-modules javafx.controls,javafx.fxml"
         },
         {
             "type": "java",
@@ -17,7 +17,7 @@
             "request": "launch",
             "mainClass": "com.lig4.main.MainClass",
             "projectName": "LIG4Jogo_121501ac",
-            "vmArgs": "-Djava.library.path=${LIG4Jogo}/javafx-sdk-20.0.1/lib --add-modules javafx.controls,javafx.fxml"
+            "vmArgs": "--module-path C:/Users/mayan/Downloads/openjfx-20.0.1_windows-x64_bin-sdk/javafx-sdk-20.0.1/lib --add-modules javafx.controls,javafx.fxml"
         }
     ]
 }
