--- a/LIG4Jogo/.vscode/launch.json
+++ b/LIG4Jogo/.vscode/launch.json
@@ -6,10 +6,17 @@
     "configurations": [
         {
             "type": "java",
+            "name": "MainClass",
+            "request": "launch",
+            "mainClass": "com.lig4.main.MainClass",
+            "projectName": "LIG4Jogo_9f6df85c"
+        },
+        {
+            "type": "java",
             "name": "Current File",
             "request": "launch",
             "mainClass": "${file}",
-            "vmArgs": "--module-path C:/Users/mayan/Downloads/openjfx-20.0.1_windows-x64_bin-sdk/javafx-sdk-20.0.1/lib --add-modules javafx.controls,javafx.fxml"
+            "vmArgs": "--module-path C:/Users/Igor Balbino/Downloads/javaFx/javafx-sdk-20.0.1/lib  --add-modules javafx.controls,javafx.fxml"
         },
         {
             "type": "java",
