--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,13 @@
             "type": "java",
             "name": "MainClass",
             "request": "launch",
+            "mainClass": "MainClass",
+            "projectName": "lig4"
+        },
+        {
+            "type": "java",
+            "name": "MainClass",
+            "request": "launch",
             "mainClass": "com.lig4.main.MainClass",
             "projectName": "lig4"
         },
