--- a/LIG4Jogo/.vscode/settings.json
+++ b/LIG4Jogo/.vscode/settings.json
@@ -1,15 +1,25 @@
 {
     "java.project.sourcePaths": ["src"],
     "java.project.outputPath": "bin",
-    "java.project.referencedLibraries": [
-        "lib/**/*.jar",
-        "c:\\Users\\mayan\\Downloads\\openjfx-20.0.1_windows-x64_bin-sdk\\javafx-sdk-20.0.1\\lib\\javafx.controls.jar",
-        "c:\\Users\\mayan\\Downloads\\openjfx-20.0.1_windows-x64_bin-sdk\\javafx-sdk-20.0.1\\lib\\javafx.fxml.jar",
-        "c:\\Users\\mayan\\Downloads\\openjfx-20.0.1_windows-x64_bin-sdk\\javafx-sdk-20.0.1\\lib\\javafx.graphics.jar",
-        "c:\\Users\\mayan\\Downloads\\openjfx-20.0.1_windows-x64_bin-sdk\\javafx-sdk-20.0.1\\lib\\javafx.media.jar",
-        "c:\\Users\\mayan\\Downloads\\openjfx-20.0.1_windows-x64_bin-sdk\\javafx-sdk-20.0.1\\lib\\javafx.swing.jar",
-        "c:\\Users\\mayan\\Downloads\\openjfx-20.0.1_windows-x64_bin-sdk\\javafx-sdk-20.0.1\\lib\\javafx.web.jar",
-        "c:\\Users\\mayan\\Downloads\\openjfx-20.0.1_windows-x64_bin-sdk\\javafx-sdk-20.0.1\\lib\\javafx.base.jar",
-        "c:\\Users\\mayan\\Downloads\\openjfx-20.0.1_windows-x64_bin-sdk\\javafx-sdk-20.0.1\\lib\\javafx-swt.jar"
-    ]
+    "java.project.referencedLibraries": {
+        "include": [
+            "lib/**/*.jar",
+            "javafx-sdk-20.0.1/lib/javafx.base.jar",
+            "javafx-sdk-20.0.1/lib/javafx.controls.jar",
+            "javafx-sdk-20.0.1/lib/javafx.fxml.jar",
+            "javafx-sdk-20.0.1/lib/javafx.graphics.jar",
+            "javafx-sdk-20.0.1/lib/javafx.media.jar",
+            "javafx-sdk-20.0.1/lib/javafx.swing.jar",
+            "javafx-sdk-20.0.1/lib/javafx.web.jar",
+            "javafx-sdk-20.0.1/lib/javafx-swt.jar"
+        ],
+        "exclude": [
+            "c:\\Users\\mayan\\Downloads\\openjfx-20.0.1_windows-x64_bin-sdk\\javafx-sdk-20.0.1\\lib\\javafx-swt.jar",
+            "c:\\Users\\mayan\\Downloads\\openjfx-20.0.1_windows-x64_bin-sdk\\javafx-sdk-20.0.1\\lib\\javafx.base.jar",
+            "c:\\Users\\mayan\\Downloads\\openjfx-20.0.1_windows-x64_bin-sdk\\javafx-sdk-20.0.1\\lib\\javafx.controls.jar",
+            "c:\\Users\\mayan\\Downloads\\openjfx-20.0.1_windows-x64_bin-sdk\\javafx-sdk-20.0.1\\lib\\javafx.fxml.jar",
+            "c:\\Users\\mayan\\Downloads\\openjfx-20.0.1_windows-x64_bin-sdk\\javafx-sdk-20.0.1\\lib\\javafx.graphics.jar",
+            "c:\\Users\\mayan\\Downloads\\openjfx-20.0.1_windows-x64_bin-sdk\\javafx-sdk-20.0.1\\lib\\javafx.media.jar"
+        ]
+    }
 }
